--- a/k/model.ipynb
+++ b/k/model.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9db20b8518>"
+       "<matplotlib.image.AxesImage at 0x7f1655340240>"
       ]
      },
      "execution_count": 3,
@@ -199,7 +199,7 @@
     "\n",
     "X = Conv2DTranspose(1, (3, 3), padding='same')(X)\n",
     "X = BatchNormalization()(X)\n",
-    "X = Activation('relu')(X)\n",
+    "X = Activation('sigmoid')(X)\n",
     "\n",
     "#X = Dropout(0.2)(X)\n",
     "\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -231,136 +231,108 @@
      "text": [
       "Train on 238 samples, validate on 103 samples\n",
       "Epoch 1/60\n",
-      "238/238 [==============================] - 6s 25ms/step - loss: 0.2332 - acc: 0.7538 - val_loss: 0.5499 - val_acc: 0.6181\n",
+      "238/238 [==============================] - 6s 25ms/step - loss: 0.2088 - acc: 0.7955 - val_loss: 0.3389 - val_acc: 0.5157\n",
       "Epoch 2/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0742 - acc: 0.9070 - val_loss: 0.5246 - val_acc: 0.6948\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1952 - acc: 0.8905 - val_loss: 0.2220 - val_acc: 0.8097\n",
       "Epoch 3/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0425 - acc: 0.9248 - val_loss: 0.1039 - val_acc: 0.8954\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1891 - acc: 0.9029 - val_loss: 0.1597 - val_acc: 0.9311\n",
       "Epoch 4/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0293 - acc: 0.9353 - val_loss: 0.0323 - val_acc: 0.9369\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1834 - acc: 0.9161 - val_loss: 0.1597 - val_acc: 0.9434\n",
       "Epoch 5/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0222 - acc: 0.9417 - val_loss: 0.0344 - val_acc: 0.9349\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1802 - acc: 0.9269 - val_loss: 0.1685 - val_acc: 0.9461\n",
       "Epoch 6/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0184 - acc: 0.9451 - val_loss: 0.0345 - val_acc: 0.9331\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1781 - acc: 0.9328 - val_loss: 0.1696 - val_acc: 0.9504\n",
       "Epoch 7/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0155 - acc: 0.9475 - val_loss: 0.0307 - val_acc: 0.9357\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1763 - acc: 0.9367 - val_loss: 0.1720 - val_acc: 0.9498\n",
       "Epoch 8/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0137 - acc: 0.9488 - val_loss: 0.0179 - val_acc: 0.9466\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1751 - acc: 0.9403 - val_loss: 0.1683 - val_acc: 0.9521\n",
       "Epoch 9/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0121 - acc: 0.9500 - val_loss: 0.0107 - val_acc: 0.9536\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1740 - acc: 0.9422 - val_loss: 0.1679 - val_acc: 0.9517\n",
       "Epoch 10/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0113 - acc: 0.9506 - val_loss: 0.0115 - val_acc: 0.9522\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1732 - acc: 0.9429 - val_loss: 0.1666 - val_acc: 0.9535\n",
       "Epoch 11/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0103 - acc: 0.9512 - val_loss: 0.0097 - val_acc: 0.9550\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1723 - acc: 0.9446 - val_loss: 0.1668 - val_acc: 0.9510\n",
       "Epoch 12/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0094 - acc: 0.9519 - val_loss: 0.0087 - val_acc: 0.9557\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1714 - acc: 0.9457 - val_loss: 0.1685 - val_acc: 0.9477\n",
       "Epoch 13/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0091 - acc: 0.9521 - val_loss: 0.0086 - val_acc: 0.9555\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1708 - acc: 0.9455 - val_loss: 0.1668 - val_acc: 0.9506\n",
       "Epoch 14/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0086 - acc: 0.9524 - val_loss: 0.0085 - val_acc: 0.9554\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1700 - acc: 0.9466 - val_loss: 0.1664 - val_acc: 0.9504\n",
       "Epoch 15/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0078 - acc: 0.9529 - val_loss: 0.0075 - val_acc: 0.9563\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1691 - acc: 0.9475 - val_loss: 0.1657 - val_acc: 0.9502\n",
       "Epoch 16/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0076 - acc: 0.9530 - val_loss: 0.0072 - val_acc: 0.9563\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1685 - acc: 0.9476 - val_loss: 0.1694 - val_acc: 0.9429\n",
       "Epoch 17/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0072 - acc: 0.9532 - val_loss: 0.0077 - val_acc: 0.9564\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1678 - acc: 0.9480 - val_loss: 0.1632 - val_acc: 0.9536\n",
       "Epoch 18/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0070 - acc: 0.9534 - val_loss: 0.0080 - val_acc: 0.9558\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1671 - acc: 0.9484 - val_loss: 0.1630 - val_acc: 0.9538\n",
       "Epoch 19/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0071 - acc: 0.9533 - val_loss: 0.0062 - val_acc: 0.9570\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1667 - acc: 0.9483 - val_loss: 0.1650 - val_acc: 0.9508\n",
       "Epoch 20/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0066 - acc: 0.9537 - val_loss: 0.0064 - val_acc: 0.9568\n",
+      "238/238 [==============================] - 4s 19ms/step - loss: 0.1659 - acc: 0.9490 - val_loss: 0.1626 - val_acc: 0.9538\n",
       "Epoch 21/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0062 - acc: 0.9539 - val_loss: 0.0057 - val_acc: 0.9573\n",
+      "238/238 [==============================] - 4s 19ms/step - loss: 0.1652 - acc: 0.9493 - val_loss: 0.1621 - val_acc: 0.9537\n",
       "Epoch 22/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0061 - acc: 0.9539 - val_loss: 0.0054 - val_acc: 0.9574\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1646 - acc: 0.9498 - val_loss: 0.1626 - val_acc: 0.9529\n",
       "Epoch 23/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0059 - acc: 0.9541 - val_loss: 0.0053 - val_acc: 0.9575\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1639 - acc: 0.9499 - val_loss: 0.1603 - val_acc: 0.9548\n",
       "Epoch 24/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0058 - acc: 0.9541 - val_loss: 0.0056 - val_acc: 0.9571\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1633 - acc: 0.9499 - val_loss: 0.1628 - val_acc: 0.9523\n",
       "Epoch 25/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0056 - acc: 0.9543 - val_loss: 0.0052 - val_acc: 0.9575\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1627 - acc: 0.9503 - val_loss: 0.1604 - val_acc: 0.9545\n",
       "Epoch 26/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0055 - acc: 0.9543 - val_loss: 0.0051 - val_acc: 0.9574\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1621 - acc: 0.9503 - val_loss: 0.1587 - val_acc: 0.9560\n",
       "Epoch 27/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0052 - acc: 0.9545 - val_loss: 0.0048 - val_acc: 0.9577\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1613 - acc: 0.9508 - val_loss: 0.1594 - val_acc: 0.9551\n",
       "Epoch 28/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0053 - acc: 0.9544 - val_loss: 0.0046 - val_acc: 0.9577\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1609 - acc: 0.9508 - val_loss: 0.1609 - val_acc: 0.9523\n",
       "Epoch 29/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0050 - acc: 0.9546 - val_loss: 0.0045 - val_acc: 0.9577\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1601 - acc: 0.9511 - val_loss: 0.1603 - val_acc: 0.9534\n",
       "Epoch 30/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0051 - acc: 0.9545 - val_loss: 0.0045 - val_acc: 0.9579\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1597 - acc: 0.9509 - val_loss: 0.1589 - val_acc: 0.9551\n",
       "Epoch 31/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0049 - acc: 0.9547 - val_loss: 0.0043 - val_acc: 0.9579\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1590 - acc: 0.9512 - val_loss: 0.1588 - val_acc: 0.9548\n",
       "Epoch 32/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0048 - acc: 0.9547 - val_loss: 0.0046 - val_acc: 0.9575\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1585 - acc: 0.9515 - val_loss: 0.1582 - val_acc: 0.9539\n",
       "Epoch 33/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0048 - acc: 0.9547 - val_loss: 0.0043 - val_acc: 0.9580\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1579 - acc: 0.9515 - val_loss: 0.1556 - val_acc: 0.9556\n",
       "Epoch 34/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0046 - acc: 0.9548 - val_loss: 0.0042 - val_acc: 0.9581\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1573 - acc: 0.9517 - val_loss: 0.1572 - val_acc: 0.9549\n",
       "Epoch 35/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0045 - acc: 0.9549 - val_loss: 0.0048 - val_acc: 0.9577\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1566 - acc: 0.9520 - val_loss: 0.1557 - val_acc: 0.9548\n",
       "Epoch 36/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0044 - acc: 0.9549 - val_loss: 0.0041 - val_acc: 0.9582\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1562 - acc: 0.9515 - val_loss: 0.1539 - val_acc: 0.9567\n",
       "Epoch 37/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0045 - acc: 0.9549 - val_loss: 0.0058 - val_acc: 0.9571\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1557 - acc: 0.9521 - val_loss: 0.1577 - val_acc: 0.9529\n",
       "Epoch 38/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0044 - acc: 0.9549 - val_loss: 0.0046 - val_acc: 0.9574\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1550 - acc: 0.9521 - val_loss: 0.1550 - val_acc: 0.9547\n",
       "Epoch 39/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0042 - acc: 0.9551 - val_loss: 0.0041 - val_acc: 0.9578\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1544 - acc: 0.9523 - val_loss: 0.1548 - val_acc: 0.9545\n",
       "Epoch 40/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0041 - acc: 0.9551 - val_loss: 0.0037 - val_acc: 0.9583\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1538 - acc: 0.9525 - val_loss: 0.1531 - val_acc: 0.9554\n",
       "Epoch 41/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0041 - acc: 0.9551 - val_loss: 0.0037 - val_acc: 0.9582\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1532 - acc: 0.9525 - val_loss: 0.1528 - val_acc: 0.9555\n",
       "Epoch 42/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0040 - acc: 0.9552 - val_loss: 0.0046 - val_acc: 0.9574\n",
+      "238/238 [==============================] - 4s 19ms/step - loss: 0.1526 - acc: 0.9525 - val_loss: 0.1535 - val_acc: 0.9550\n",
       "Epoch 43/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0040 - acc: 0.9552 - val_loss: 0.0035 - val_acc: 0.9584\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1523 - acc: 0.9526 - val_loss: 0.1515 - val_acc: 0.9563\n",
       "Epoch 44/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0039 - acc: 0.9553 - val_loss: 0.0037 - val_acc: 0.9582\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1516 - acc: 0.9527 - val_loss: 0.1512 - val_acc: 0.9560\n",
       "Epoch 45/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0038 - acc: 0.9553 - val_loss: 0.0040 - val_acc: 0.9579\n",
+      "238/238 [==============================] - 4s 19ms/step - loss: 0.1509 - acc: 0.9529 - val_loss: 0.1528 - val_acc: 0.9543\n",
       "Epoch 46/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0040 - acc: 0.9551 - val_loss: 0.0037 - val_acc: 0.9583\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1506 - acc: 0.9528 - val_loss: 0.1509 - val_acc: 0.9557\n",
       "Epoch 47/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0039 - acc: 0.9553 - val_loss: 0.0034 - val_acc: 0.9584\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1499 - acc: 0.9528 - val_loss: 0.1491 - val_acc: 0.9568\n",
       "Epoch 48/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0037 - acc: 0.9554 - val_loss: 0.0034 - val_acc: 0.9584\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1494 - acc: 0.9531 - val_loss: 0.1503 - val_acc: 0.9553\n",
       "Epoch 49/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0038 - acc: 0.9553 - val_loss: 0.0040 - val_acc: 0.9581\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1489 - acc: 0.9530 - val_loss: 0.1508 - val_acc: 0.9539\n",
       "Epoch 50/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0038 - acc: 0.9553 - val_loss: 0.0042 - val_acc: 0.9575\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1484 - acc: 0.9530 - val_loss: 0.1481 - val_acc: 0.9560\n",
       "Epoch 51/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0037 - acc: 0.9554 - val_loss: 0.0036 - val_acc: 0.9582\n",
-      "Epoch 52/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0035 - acc: 0.9555 - val_loss: 0.0031 - val_acc: 0.9586\n",
-      "Epoch 53/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0036 - acc: 0.9554 - val_loss: 0.0033 - val_acc: 0.9586\n",
-      "Epoch 54/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0036 - acc: 0.9554 - val_loss: 0.0033 - val_acc: 0.9584\n",
-      "Epoch 55/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0036 - acc: 0.9555 - val_loss: 0.0031 - val_acc: 0.9587\n",
-      "Epoch 56/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0035 - acc: 0.9555 - val_loss: 0.0032 - val_acc: 0.9585\n",
-      "Epoch 57/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0036 - acc: 0.9555 - val_loss: 0.0039 - val_acc: 0.9581\n",
-      "Epoch 58/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0034 - acc: 0.9556 - val_loss: 0.0030 - val_acc: 0.9586\n",
-      "Epoch 59/60\n",
-      "238/238 [==============================] - 4s 19ms/step - loss: 0.0034 - acc: 0.9556 - val_loss: 0.0030 - val_acc: 0.9586\n",
-      "Epoch 60/60\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.0034 - acc: 0.9556 - val_loss: 0.0030 - val_acc: 0.9586\n"
+      "170/238 [====================>.........] - ETA: 1s - loss: 0.1492 - acc: 0.9541"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nEpoch 20/20\\n60000/60000 [==============================] - 7s - loss: 0.0398\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -380,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
